--- a/src/Comment.css
+++ b/src/Comment.css
@@ -1,5 +1,5 @@
-.delete {
-  color: red;
-  margin-left: 8px;
-  cursor: pointer;
+.has-text-right {
+  justify-content: flex-end;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
